chore : 전체 UI 2차 수정

--- a/app/src/main/res/layout/fragment_schedule_detail.xml
+++ b/app/src/main/res/layout/fragment_schedule_detail.xml
@@ -31,7 +31,7 @@
                 app:layout_constraintStart_toStartOf="parent"
 
                 android:text="2024.12.12"
-                style="@style/subtitle"
+                style="@style/subtitle_b"
                 />
 
             <ImageView
