--- a/app/src/main/res/layout/schedule_item.xml
+++ b/app/src/main/res/layout/schedule_item.xml
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
 
         android:text="13:00"
-        style="@style/subtitle"
+        style="@style/medium_b"
         />
 
     <androidx.recyclerview.widget.RecyclerView
