--- a/app/src/main/res/layout/today_group_item.xml
+++ b/app/src/main/res/layout/today_group_item.xml
@@ -1,76 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="5dp"
     android:background="@drawable/round_white_radius12"
     android:elevation="5dp"
-    android:padding="18dp"
-    android:layout_margin="5dp">
+    android:padding="18dp">
 
     <ToggleButton
         android:id="@+id/taken_cb"
-        android:layout_width="37dp"
-        android:layout_height="37dp"
-
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        android:checked="false"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
 
         android:background="@drawable/taken_checkbox_selector"
+        android:checked="false"
 
         android:drawablePadding="0dp"
 
         android:textOff=" "
+
         android:textOn=" "
-        />
+
+        app:layout_constraintEnd_toStartOf="@+id/group_name_tv"
+        app:layout_constraintHorizontal_bias="0."
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/group_name_tv"
+        style="@style/body_big"
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content"
-
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/taken_cb"
-
         android:layout_marginStart="20dp"
 
-
         android:text="약 그룹 이름"
-        style="@style/subtitle"
-        />
+
+
+        app:layout_constraintBottom_toBottomOf="@+id/taken_cb"
+        app:layout_constraintEnd_toStartOf="@+id/medicine_num_tv"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toEndOf="@+id/taken_cb"
+        app:layout_constraintTop_toTopOf="@+id/taken_cb"
+        app:layout_constraintVertical_bias="0.35" />
 
     <TextView
         android:id="@+id/medicine_num_tv"
+        style="@style/medium_gray"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        app:layout_constraintStart_toEndOf="@id/group_name_tv"
-        app:layout_constraintTop_toTopOf="@id/group_name_tv"
-        app:layout_constraintBottom_toBottomOf="@id/group_name_tv"
-
         android:layout_marginStart="20dp"
-
         android:text="약 5개"
-        style="@style/medium_gray"
-        />
+        android:textSize="14sp"
+
+        app:layout_constraintBottom_toBottomOf="@id/group_name_tv"
+        app:layout_constraintEnd_toStartOf="@+id/modify_btn"
+        app:layout_constraintStart_toEndOf="@+id/group_name_tv"
+        app:layout_constraintTop_toTopOf="@id/group_name_tv" />
 
     <ImageView
         android:id="@+id/modify_btn"
-        android:layout_width="16dp"
-        android:layout_height="28dp"
-
-        app:layout_constraintTop_toTopOf="@id/group_name_tv"
-        app:layout_constraintBottom_toBottomOf="@id/group_name_tv"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        android:layout_marginEnd="16dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
 
         android:src="@drawable/right_arrow"
-        />
+        app:layout_constraintBottom_toBottomOf="@id/group_name_tv"
 
+        app:layout_constraintEnd_toEndOf="parent"
 
+        app:layout_constraintTop_toTopOf="@id/group_name_tv" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
