fix : 레이아웃 수정 4차 복약등록 레이아웃 미리 나와있고 클릭되던 부분 수정

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -55,6 +55,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/round_rect_500_12dp"
         android:translationZ="4dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/btn_add_medicine_group"
         app:layout_constraintEnd_toEndOf="parent">
 
