--- a/app/src/main/res/layout/fragment_cycle.xml
+++ b/app/src/main/res/layout/fragment_cycle.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:elevation="0dp"
     tools:context=".ui.take.fragment.CycleFragment">
 
     <ImageView
