--- a/app/src/main/res/layout/item_recyclerview_cycle.xml
+++ b/app/src/main/res/layout/item_recyclerview_cycle.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="240dp"
-    android:layout_height="wrap_content"
+    android:layout_height="65dp"
     android:layout_marginHorizontal="20dp"
     android:layout_marginTop="24dp"
-    android:background="@drawable/user_cl_bg_white_gradient_gray"
+    android:elevation="3dp"
+    android:background="@drawable/home_cl_bg_connection"
     android:padding="16dp">
 
         <ImageView
             android:id="@+id/iv_cycle_one_alarm"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginBottom="8dp"
             android:src="@drawable/baseline_access_time_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
             android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/iv_cycle_one_alarm"
@@ -35,7 +34,6 @@
             android:id="@+id/iv_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:src="@drawable/baseline_cancel_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
