--- a/app/src/main/res/layout/bottomsheet_calendar.xml
+++ b/app/src/main/res/layout/bottomsheet_calendar.xml
@@ -27,7 +27,7 @@
         android:id="@+id/tv_calendar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="시작 날짜"
+        android:text="날짜 선택"
         style="@style/body_b"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/bottom_sheet_handle"
