--- a/app/src/main/res/layout/dialog_timepicker.xml
+++ b/app/src/main/res/layout/dialog_timepicker.xml
@@ -28,7 +28,7 @@
         android:timePickerMode="spinner"
         app:layout_constraintTop_toBottomOf="@id/dialogTitle" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@drawable/user_cl_bg_white_radius_bot"
@@ -36,29 +36,27 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_cancel"
-            style="@style/body_b"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_marginStart="32dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
             android:background="@drawable/user_cl_bg_green_radius"
             android:text="@string/cancel"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textColor="@color/white" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_save"
-            style="@style/body_b"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_marginEnd="32dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_weight="1"
             android:background="@drawable/user_cl_bg_green_radius"
             android:text="@string/save"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textColor="@color/white" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
