--- a/app/src/main/res/layout/item_results.xml
+++ b/app/src/main/res/layout/item_results.xml
@@ -63,9 +63,11 @@
             android:layout_gravity="center_horizontal"
             android:translationZ="1dp"
 
+            android:visibility="gone"
+
             android:textOn=""
             android:textOff=""
-            android:src="@drawable/baseline_arrow_circle_right_24dp"
+            android:src="@drawable/right_arrow"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
