fix: 프로필 디폴트 이미지 크기 이상

--- a/app/src/main/res/layout/schedule_profile_item.xml
+++ b/app/src/main/res/layout/schedule_profile_item.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
 
-            android:src="@color/gray"
+            android:src="@color/back_500"
             />
 
     </androidx.cardview.widget.CardView>
