fix : 레이아웃 corner: radius 20dp 단위로 지정된 일부 레이아웃 12로 수정, 맵 프래그먼트 뒤로가기 추가

--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -16,7 +16,7 @@
         android:elevation="4dp"
         android:paddingHorizontal="16dp"
         app:layout_constraintStart_toEndOf="@+id/btn_pharmacy_list"
-        app:layout_constraintTop_toTopOf="@+id/btn_pharmacy_list" />
+        app:layout_constraintTop_toTopOf="@+id/btn_back" />
 
     <com.kakao.vectormap.MapView
         android:id="@+id/map_view"
@@ -24,7 +24,35 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_back"
+        style="@style/body"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/btn_map_back_arr"
+        android:paddingHorizontal="16dp"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_pharmacy_list"
+        style="@style/body"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/btn_pharmacy_list"
+        android:paddingHorizontal="16dp"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@+id/btn_back"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -39,19 +67,6 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_pharmacy_list"
-        style="@style/body"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/btn_pharmacy_list"
-        android:paddingHorizontal="16dp"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/map_research"
