fix : nameFragment 리싸이클러뷰 아이템과 상단 이름입력칸 스타일 변경

--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -124,7 +124,7 @@
 
                 <EditText
                     android:id="@+id/et_medicine_name"
-                    style="@style/medium"
+                    style="@style/body"
                     android:layout_width="226dp"
                     android:layout_height="48dp"
                     android:layout_gravity="center_vertical"
