--- a/app/src/main/res/layout/item_recyclerview_name.xml
+++ b/app/src/main/res/layout/item_recyclerview_name.xml
@@ -37,6 +37,7 @@
 
     <EditText
         android:id="@+id/et_medicine_name"
+        style="@style/body"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_gravity="center_vertical"
