chore: 안 쓰는 파일 정리

--- a/app/src/main/res/layout/fragment_terms.xml
+++ b/app/src/main/res/layout/fragment_terms.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
     android:background="@color/white"
-    tools:context=".ui.take.fragment.TermsFragment">
+    tools:context=".ui.user.TermsFragment">
 
     <ImageView
         android:id="@+id/iv_back"
