--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ui.SignIn.SignInFragment">
+    tools:context=".ui.sign_in.SignInFragment">
 
     <!-- 임시 레이아웃 -->
 
