--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,10 @@
         <!-- Customize your theme here. -->
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
         <item name="chipStyle">@drawable/selector_key_button</item>
+
+        <!--디폴트 스플래시 화면 없애는 코드-->
+        <item name="android:windowIsTranslucent">true</item>
+
     </style>
     <style name="AppBottomSheetDialogTheme"
         parent="Theme.Design.Light.BottomSheetDialog">
