--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -94,4 +94,19 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ImageView
+        android:id="@+id/add_image_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+
+        android:src="@drawable/add_memo"
+        android:translationZ="4dp"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
