--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -207,7 +207,33 @@
                     app:layout_constraintTop_toBottomOf="@+id/home_rv_today_medicine_group" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
+                android:layout_marginTop="16dp"
+                android:paddingHorizontal="16dp"
+
+                android:text="@string/knock_text"
+                style="@style/medium_b"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="13dp"
+                android:layout_marginHorizontal="22dp"
+
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:orientation="horizontal"
+
+                tools:listitem="@layout/knock_banner_item"
+                tools:itemCount="4"
+                >
+
+            </androidx.recyclerview.widget.RecyclerView>
 
             <TextView
                 android:id="@+id/textView6"
