--- a/app/src/main/res/layout/knock_banner_item.xml
+++ b/app/src/main/res/layout/knock_banner_item.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="165dp"
-    android:layout_height="210dp"
+    android:layout_width="120dp"
+    android:layout_height="150dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/round_white_radius12_outlined"
     android:translationZ="4dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/profile_cv"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="15dp"
 
         app:cardCornerRadius="90dp"
         >
@@ -41,10 +41,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="6dp"
 
         android:text="내친구"
-        style="@style/medium"
+        style="@style/body"
         />
 
     <TextView
@@ -56,14 +56,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="13dp"
 
         android:text="@string/knock_text"
-        style="@style/body_white"
+        style="@style/caption_white"
 
         android:background="@drawable/round_back500_radius5"
-        android:paddingVertical="4dp"
-        android:paddingHorizontal="9dp"
+        android:paddingVertical="3dp"
+        android:paddingHorizontal="7dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
