--- a/app/src/main/res/layout/fragment_medicine_result.xml
+++ b/app/src/main/res/layout/fragment_medicine_result.xml
@@ -6,7 +6,7 @@
     android:name="com.blackcows.butakaeyak.ui.home.ResultsFragment"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    android:layout_marginHorizontal="16dp"
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:context=".ui.search.MedicineResultFragment"
     tools:listitem="@layout/item_results" />
